--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -23,13 +23,13 @@ security:
                 target: /
 
     access_control:
-        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/recovery, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/reset, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/, roles: ROLE_USER }
+        - { path: /login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: /register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: /recovery, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: /reset, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: /, roles: ROLE_USER }
         # require ROLE_ADMIN for /admin*
-        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: /admin, roles: ROLE_ADMIN }
 
     encoders:
         AppBundle\Entity\User:
