--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "components/jquery": "^3.1",
         "components/bootstrap": "^3.3",
-        "symfony/assetic-bundle": "^2.8"
+        "symfony/assetic-bundle": "^2.8",
+        "knplabs/knp-paginator-bundle": "^2.5"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
