--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -3,6 +3,8 @@
 security:
 
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
+    access_denied_url: /access_denied
+
     providers:
         user_provider:
             entity:
@@ -18,6 +20,8 @@ security:
                 check_path: login
                 provider: user_provider
                 username_parameter: _email
+                always_use_default_target_path: true
+                default_target_path:            /
             logout:
                 path:   /logout
                 target: /
@@ -27,9 +31,9 @@ security:
         - { path: /register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /recovery, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /reset, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: /, roles: ROLE_USER }
         - { path: /create, roles: ROLE_MODERATOR}
         - { path: /admin, roles: ROLE_ADMIN }
+        - { path: /, roles: ROLE_USER }
 
     encoders:
         AppBundle\Entity\User:
