--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -21,7 +21,7 @@ security:
                 provider: user_provider
                 username_parameter: _email
                 always_use_default_target_path: true
-                default_target_path:            /
+                default_target_path:            /news
             logout:
                 path:   /logout
                 target: /
@@ -31,9 +31,11 @@ security:
         - { path: /register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /recovery, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /reset, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: /moderating_articles, roles: ROLE_MODERATOR}
         - { path: /create, roles: ROLE_MODERATOR}
         - { path: /admin, roles: ROLE_ADMIN }
-        - { path: /, roles: ROLE_USER }
+        - { path: /ajax, roles: ROLE_USER}
+        - { path: /news, roles: ROLE_USER }
 
     encoders:
         AppBundle\Entity\User:
