--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "components/jquery": "^3.1",
         "components/bootstrap": "^3.3",
         "symfony/assetic-bundle": "^2.8",
-        "knplabs/knp-paginator-bundle": "^2.5"
+        "knplabs/knp-paginator-bundle": "^2.5",
+        "kms/froala-editor-bundle": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
