--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@
 !var/SymfonyRequirements.php
 /vendor/
 /web/bundles/
+/web/articles
+/web/upload
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/dictionaries
