--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -104,10 +104,6 @@ assetic:
             inputs:
                 - ../vendor/components/jquery/jquery.min.js
 
-        autoresize:
-            inputs:
-                - ../web/assets/autoresize.jquery.js
-
         froala_style:
             inputs:
                 - ../vendor/kms/froala-editor-bundle/Resources/public/froala_editor_2.3.5/css/froala_style.min.css
@@ -120,7 +116,7 @@ knp_paginator:
     page_range: 5                      # default page range used in pagination control
     default_options:
         page_name: page                # page query parameter name
-        sort_field_name: sort          # sort field query parameter name
+        sort_field_name: re          # sort field query parameter name
         sort_direction_name: direction # sort direction query parameter name
         distinct: true                 # ensure distinct results, useful when ORM queries are using GROUP BY statements
     template:
