--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -28,14 +28,19 @@ article:
     defaults: { _controller: AppBundle:Article:index}
     requirements:
         _locale: en|ru|be
-edit_article:
-    path:     /{_locale}/edit/{id}
-    defaults: { _controller: AppBundle:Article:edit }
+category:
+    path:     /{_locale}/category/{id}
+    defaults: { _controller: AppBundle:Category:index}
     requirements:
         _locale: en|ru|be
 delete_article:
     path:     /{_locale}/delete/{id}
     defaults: { _controller: AppBundle:Article:delete}
+    requirements:
+        _locale: en|ru|be
+edit_article:
+    path:     /{_locale}/edit/{id}
+    defaults: { _controller: AppBundle:Article:edit }
     requirements:
         _locale: en|ru|be
 login:
