--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "knplabs/knp-paginator-bundle": "^2.5",
         "kms/froala-editor-bundle": "dev-master",
         "knplabs/knp-menu-bundle": "^2.1",
-        "knplabs/knp-menu": "^2.2"
+        "knplabs/knp-menu": "^2.2",
+        "symfony/serializer": "^3.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
