--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -81,24 +81,27 @@ assetic:
             inputs:
                 - ../vendor/components/bootstrap/css/bootstrap.min.css
                 - ../vendor/components/bootstrap/css/bootstrap-theme.min.css
-            filters: [cssrewrite]
 
         bootstrap_glyphicons_ttf:
             inputs:
                 - ../vendor/components/bootstrap/fonts/glyphicons-halflings-regular.ttf
-            output: "fonts/glyphicons-halflings-regular.ttf"
+            output: fonts/glyphicons-halflings-regular.ttf
         bootstrap_glyphicons_eot:
             inputs:
                 - ../vendor/components/bootstrap/fonts/glyphicons-halflings-regular.eot
-            output: "fonts/glyphicons-halflings-regular.eot"
+            output: fonts/glyphicons-halflings-regular.eot
         bootstrap_glyphicons_svg:
             inputs:
                 - ../vendor/components/bootstrap/fonts/glyphicons-halflings-regular.svg
-            output: "fonts/glyphicons-halflings-regular.svg"
+            output: fonts/glyphicons-halflings-regular.svg
         bootstrap_glyphicons_woff:
             inputs:
                 - ../vendor/components/bootstrap/fonts/glyphicons-halflings-regular.woff
-            output: "fonts/glyphicons-halflings-regular.woff"
+            output: fonts/glyphicons-halflings-regular.woff
+        bootstrap_glyphicons_woff2:
+            inputs:
+                - ../vendor/components/bootstrap/fonts/glyphicons-halflings-regular.woff2
+            output: fonts/glyphicons-halflings-regular.woff2
 
         jquery:
             inputs:
